devel
-----

* Now clearing an internal map inside the traverser engine correctly.

* Ported `/_admin/cluster*` API to C++.

* Introduced AsyncAgencyComm for asynchronous internal agency requests.

* Fix bug affecting spliced subqueries when memory blocks are reused.

* Hide swagger api calls in list by default

* Fix Windows client package JS installation paths.

* Updated arangosync to 0.7.2.

* Renamed document / index / vertex "handle" to "identifier" / "id" for
  consistency in documentation and error messages.

* Agency relational operators TTL fix.

* Improve latency in scheduler.

* Fixed internal issue #4748: Editing a single edgeDefinition using the graph
  API failed if it was not shared between all available graphs.

* Changed HTTP return code for an error case in /_api/cluster/endpoints REST API.
  Now, if the API is called on a single server, it will return HTTP 501 instead
  of HTTP 403.

* Changed HTTP return code for an error case in /_api/cluster/agency-dump REST API.
  Now, if the API is called on a server type other than coordinator, it will return
  HTTP 501 instead of HTTP 403.

* Fixed undefined behavior on node delete.

* Fixed agency invalid operation

* Bugfix: An AQL ternary expression with the condition being true at query
  compile time would not execute its false branch.

* Fixed uptime in _admin/statistics.

* Fixed a bug in smart graph bfs traversals that might violate path uniqueness
  requirements in rare cases.

* Fix execution ability in CentOS 6 regarding newer boost.

* Fixed permissions for dump/restore.

* The _users collection is now properly restored when using arangorestore.

* Updated arangosync to 0.7.1.

* rename `minReplicationFactor` into `writeConcern` to make it consistent with
  `--cluster.write-concern` and avoid confusion with
  `--cluster.min-replication-factor`

* ArangoDB web UI switched build system from grunt to webpack.
  It supports React now, but the previous framework is still in use.
