@@ -19,3 +19,8 @@ install_command_alias(${BIN_ARANGOSH}
   ${CMAKE_INSTALL_BINDIR}
   foxx-manager)
 install_config(foxx-manager)
+
+install_command_alias(${BIN_ARANGOSH}
+  ${CMAKE_INSTALL_BINDIR}
+  arangoinspect)
+install_config(arangoinspect)
